# email-mcp

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  state.py
app/handlers/: __init__.py  auth.py
app/handlers/calendar/: calendar.py
app/handlers/document/: __init__.py  manipulation.py  pdf.py  utils.py
app/handlers/document/utils/: __init__.py  breaks.py  charts.py  extra_components.py  images.py  lists.py  main.py  sections.py  signature.py  tables.py  template.py  text.py
app/handlers/email/: batch.py  fetching.py  labels.py  profile.py  search.py  sending.py
app/handlers/pdf/: __init__.py  pdf.py  pdf_utils.py
app/handlers/sheets/: sheets.py
app/utils/: email.py  logging.py
