[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-mcp"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "reportlab",
    "PyPDF2",
    "weasyprint",
]

[tool.hatch.build.targets.wheel]
include = ["/main.py"]
